force-app/main/default/objects/AObjectBig__c/AObjectBig__c.object-meta.xml
<CustomObject>
    <label>ABigObject</label>
    <nameField>
        <label>AObjectBig Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ABigObjects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>