force-app/main/default/objects/AObjectBig__c/fields/MultiselectPicklist__c.field-meta.xml
<CustomField>
    <fullName>MultiselectPicklist__c</fullName>
    <label>MultiselectPicklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>point1</fullName>
            </value>
            <value>
                <fullName>point2</fullName>
            </value>
            <value>
                <fullName>point3</fullName>
            </value>
            <value>
                <fullName>point4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>