force-app/main/default/objects/AObjectBig__c/fields/RecordChangeDelete__c.field-meta.xml
<CustomField>
    <fullName>RecordChangeDelete__c</fullName>
    <label>RecordChangeDelete</label>
    <length>50</length>
    <type>Text</type>
</CustomField>