force-app/main/default/objects/AObjectBig__c/fields/Sum__c.field-meta.xml
<CustomField>
    <fullName>Sum__c</fullName>
    <label>Sum</label>
    <summarizedField>ASmallObject__c.Value__c</summarizedField>
    <summaryForeignKey>ASmallObject__c.ABigObject__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>